# ceammc-pd-lib-experimental

./: .gitignore  CMakeLists.txt  config.h  readme.md  sdif_lib.cpp
_template_src_/: tl_delay.cpp  tl_parameter.cpp  tl_toggle.cpp
lib/: ceammc_timeline.cpp  ceammc_timeline.h
src/: mlist_data_type.cpp  mlist_flat.cpp  mlist_functions.h  mlist_llll.cpp  mlist_llll.h  mlist_obj.cpp  mlist_obj.h  sdif_data_types.cpp  sdif_data_types.h  sdif_file.cpp  sdif_file.h  sdif_frame.cpp  sdif_frame.h  sdif_matrix.cpp  sdif_matrix.h  sublist_data_type.cpp  sublist_data_type.h  sublist_flat.cpp  sublist_flat.h  sublist_llll.cpp  sublist_llll.h  sublist_obj.cpp  sublist_obj.h  synth_res.cpp  synth_res.h  synth_sine.cpp  synth_sine.h
src/conv/: conv_image.cpp  conv_image.h  conv_json.cpp  conv_json.h  conv_list.cpp  conv_list.h  conv_matrix.cpp  conv_matrix.h  conv_mlist.cpp  conv_mlist.h  image_matrix.cpp  image_matrix.h  image_mlist.cpp  image_mlist.h  json_list.cpp  json_list.h  json_mlist.cpp  json_mlist.h  list_json.cpp  list_json.h  matrix_image.cpp  matrix_image.h  matrix_mlist.h  mlist_flat.cpp  mlist_flat.h  mlist_image.cpp  mlist_image.h  mlist_json.cpp  mlist_json.h  mlist_llll.cpp  mlist_llll.h
src/img/: image_data_type.cpp  image_data_type.h  image_obj.cpp  image_obj.h  mlist_image.cpp
src/json/: json_data_type.cpp  json_data_type.h  json_dict.cpp  json_dict.h  json_obj.cpp  json_obj.h  json_recorder.cpp  json_recorder.h  mstring_data_type.cpp  mstring_data_type.h
src/list/: list_do.cpp  list_do.h
src/matrix/: matrix_data_type.cpp  matrix_data_type.h  matrix_fft_row.cpp  matrix_obj.h  matrix_record.cpp
src/mlist/: mlist_data_type.cpp  mlist_data_type.h  mlist_flat.h  mlist_flip.cpp  mlist_flip.h  mlist_llll.cpp  mlist_llll.h  mlist_obj.cpp  mlist_obj.h  mlist_unpack.cpp  mlist_unpack.h
src/sdif/: sdif_1trc.cpp  sdif_1trc.h  sdif_1trc_merge.cpp  sdif_1trc_merge.h  sdif_data_types.cpp  sdif_data_types.h  sdif_file.cpp  sdif_file.h  sdif_frame.cpp  sdif_frame.h  sdif_matrix.cpp  sdif_matrix.h  sdif_matrix_each_row.h
src/synth/: synth_res.cpp  synth_res.h  synth_sine.h
src/tl/: tl_cue.cpp  tl_transport.cpp  tl_value.cpp
tests/: CMakeLists.txt  pd_mock.c  test_converters.cpp
